test/equality/negative/polymorphic_equality.mli
val f : 'a -> 'a -> bool
(*@ equality *)
